[package]
name = "rust-key"
version = "0.1.0"
edition = "2021"
description = "A CLI tool for ciphering, encoding, and hashing"
repository = "https://github.com/Soulsender/rust-key" 
license = "GPL 3.0"
authors = ["Soulsender <soul@soulsender.me>"]

[dependencies]
rbase64 = "2.0.3"
clap = { version = "4.0", features = ["derive"] }
md5 = "0.7.0"
hex = "0.4.3"
sha2 = "0.10.8"
md4 = "0.10.2"
md2 = "0.10.2"
phf = { version = "0.11", features = ["macros"] }
sha3 = "0.10.8"
sha1-checked = "0.10.0"
